small change in allberths

--- a/HouHavn.Web/Pages/Lists/AllBerths.cshtml
+++ b/HouHavn.Web/Pages/Lists/AllBerths.cshtml
@@ -2,14 +2,11 @@
 @model HouHavn.Web.Pages.Lists.AllBerthsModel
 
 @{
-    ViewData["Title"] = "AllBerths";
+    ViewData["Title"] = "Bådpladser";
 }
 
-<h1>AllBerths</h1>
+<h1>Bådpladser</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
