--- a/HouHavn.Web/Pages/Creation/People.cshtml
+++ b/HouHavn.Web/Pages/Creation/People.cshtml
@@ -5,93 +5,133 @@
     ViewData["Title"] = "People";
 }
 
-<h1>People</h1>
+<h2>Opret kunde</h2>
 
-<h4>Person</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Person.FirstName" class="control-label"></label>
-                <input asp-for="Person.FirstName" class="form-control" />
-                <span asp-validation-for="Person.FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.LastName" class="control-label"></label>
-                <input asp-for="Person.LastName" class="form-control" />
-                <span asp-validation-for="Person.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.Address" class="control-label"></label>
-                <input asp-for="Person.Address" class="form-control" />
-                <span asp-validation-for="Person.Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.PostalCode" class="control-label"></label>
-                <input asp-for="Person.PostalCode" class="form-control" />
-                <span asp-validation-for="Person.PostalCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.City" class="control-label"></label>
-                <input asp-for="Person.City" class="form-control" />
-                <span asp-validation-for="Person.City" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.Country" class="control-label"></label>
-                <input asp-for="Person.Country" class="form-control" />
-                <span asp-validation-for="Person.Country" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.PhoneNumber" class="control-label"></label>
-                <input asp-for="Person.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Person.PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.Email" class="control-label"></label>
-                <input asp-for="Person.Email" class="form-control" />
-                <span asp-validation-for="Person.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.Member" class="control-label"></label><br/>
-                <input asp-for="Person.Member" type="radio" value="1"/>
-                <label>Ja</label><br/>
-                <input asp-for="Person.Member" type="radio" value="0" checked/>
-                <label>Nej</label>
-                <span asp-validation-for="Person.Member" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.BoatGuild" class="control-label"></label><br />
-                <input asp-for="Person.BoatGuild" type="radio" value="1"/>
-                <label>Ja</label><br />
-                <input asp-for="Person.BoatGuild" type="radio" value="0" checked />
-                <label>Nej</label>
-                <span asp-validation-for="Person.BoatGuild" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.DingyGuild" class="control-label"></label><br />
-                <input asp-for="Person.DingyGuild" type="radio" value="1" />
-                <label>Ja</label><br />
-                <input asp-for="Person.DingyGuild" type="radio" value="0" checked />
-                <label>Nej</label>
-                <span asp-validation-for="Person.DingyGuild" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Person.Notes" class="control-label"></label>
-                <textarea asp-for="Person.Notes" class="form-control"></textarea>
-                <span asp-validation-for="Person.Notes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<form method="post" autocomplete="off">
+    <div asp-validation-summary="All"></div>
 
-<div>
-    <a asp-page="/Index">Back to List</a>
-</div>
+    <div class="input">
+        <input asp-for="Person.FirstName" placeholder=" "/>
+        <label asp-for="Person.FirstName"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.FirstName" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.LastName" placeholder=" "/>
+        <label asp-for="Person.LastName"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.LastName" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.Address" placeholder=" " />
+        <label asp-for="Person.Address"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.Address" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.PostalCode" placeholder=" " />
+        <label asp-for="Person.PostalCode"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.PostalCode" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.City" placeholder=" " />
+        <label asp-for="Person.City"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.City" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.Country" placeholder=" " />
+        <label asp-for="Person.Country"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.Country" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.PhoneNumber" placeholder=" " />
+        <label asp-for="Person.PhoneNumber"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.PhoneNumber" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Person.Email" placeholder=" " />
+        <label asp-for="Person.Email"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Person.Email" class="error"></span>
+    </div>
+
+    <div class="radio">
+        <label asp-for="Person.Member"></label>
+        <label>
+            <input asp-for="Person.Member" type="radio" value="1"/>
+            Ja
+        </label>
+        <label>
+            <input asp-for="Person.Member" type="radio" value="0" checked/>
+            Nej
+        </label>
+        <span asp-validation-for="Person.Member" class="error"></span>
+    </div>
+
+    <div class="radio">
+        <label asp-for="Person.BoatGuild"></label>
+        <label>
+            <input asp-for="Person.BoatGuild" type="radio" value="1"/>
+            Ja
+        </label>
+        <label>
+            <input asp-for="Person.BoatGuild" type="radio" value="0" checked />
+            Nej
+        </label>
+        <span asp-validation-for="Person.BoatGuild" class="error"></span>
+    </div>
+
+    <div class="radio">
+        <label asp-for="Person.DingyGuild"></label>
+        <label>
+            <input asp-for="Person.DingyGuild" type="radio" value="1" />
+            Ja
+        </label>
+        <label>
+            <input asp-for="Person.DingyGuild" type="radio" value="0" checked />
+            Nej
+        </label>
+        <span asp-validation-for="Person.DingyGuild" class="error"></span>
+    </div>
+
+    <div class="textarea">
+        <label asp-for="Person.Notes"></label>
+        <textarea asp-for="Person.Notes" placeholder=" "></textarea>
+        <span asp-validation-for="Person.Notes" class="error"></span>
+    </div>
+
+    <div class="submit">
+        <input type="submit" value="Opret kunde"/>
+    </div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
