--- a/HouHavn.Web/Pages/Creation/berths.cshtml
+++ b/HouHavn.Web/Pages/Creation/berths.cshtml
@@ -2,37 +2,38 @@
 @model HouHavn.Web.Pages.Creation.BerthsModel
 
 @{
-    ViewData["Title"] = "berths";
+    ViewData["Title"] = "Opret bådplads";
 }
 
-<h1>berths</h1>
+<h2>Opret bådplads</h2>
 
-<h4>Berth</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Berth.BerthId" class="control-label"></label>
-                <input asp-for="Berth.BerthId" class="form-control" />
-                <span asp-validation-for="Berth.BerthId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Berth.Bridge" class="control-label"></label>
-                <input asp-for="Berth.Bridge" class="form-control" />
-                <span asp-validation-for="Berth.Bridge" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<form method="post">
+    <div asp-validation-summary="All" class="error"></div>
 
-<div>
-    <a asp-page="/Index">Back to List</a>
-</div>
+    <div class="input">
+        <input asp-for="Berth.BerthId"  placeholder=" "/>
+        <label asp-for="Berth.BerthId"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Berth.BerthId" class="error"></span>
+    </div>
+
+    <div class="input">
+        <input asp-for="Berth.Bridge" placeholder=" " />
+        <label asp-for="Berth.Bridge"></label>
+        <div class="slider"></div>
+    </div>
+    <div>
+        <span asp-validation-for="Berth.Bridge" class="error"></span>
+    </div>
+
+    <div class="submit">
+        <input type="submit" value="Opret bådplads" />
+    </div>
+</form>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
