--- a/HouHavn.Web/Pages/Lists/AllBerths.cshtml
+++ b/HouHavn.Web/Pages/Lists/AllBerths.cshtml
@@ -7,40 +7,48 @@
 
 <h1>Bådpladser</h1>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Berth[0].BerthId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Berth[0].Bridge)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Berth[0].Boats.FirstOrDefault().Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Berth[0].Boats.FirstOrDefault().PersonNavigation.FullName)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Berth) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.BerthId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Bridge)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Boats.FirstOrDefault().Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Boats.FirstOrDefault().PersonNavigation.FullName)
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="table">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Berth[0].BerthId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Berth[0].Bridge)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Berth[0].Boats.FirstOrDefault().Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Berth[0].Boats.FirstOrDefault().Type)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Berth[0].Boats.FirstOrDefault().PersonNavigation.FullName)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model.Berth) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BerthId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Bridge)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Boats.FirstOrDefault().Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Boats.FirstOrDefault().Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Boats.FirstOrDefault().PersonNavigation.FullName)
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
 
