Finished up the code for the overview and view of the page that the links leads too. TODO: design of the linked pages

--- a/HouHavn.Web/Pages/Creation/berths.cshtml
+++ b/HouHavn.Web/Pages/Creation/berths.cshtml
@@ -9,7 +9,7 @@
 
 <hr />
 <form method="post">
-    <div asp-validation-summary="All" class="error"></div>
+    @*<div asp-validation-summary="All" class="error"></div>*@
 
     <div class="input">
         <input asp-for="Berth.BerthId"  placeholder=" "/>
