--- a/HouHavn.Web/Pages/Creation/Boats.cshtml
+++ b/HouHavn.Web/Pages/Creation/Boats.cshtml
@@ -8,7 +8,7 @@
 <h2>Opret båd</h2>
 <hr />
 <form method="post" autocomplete="off">
-    <div asp-validation-summary="All" class="error"></div>
+    @*<div asp-validation-summary="All" class="error"></div>*@
 
     <div class="input">
         <input asp-for="Boat.Name" placeholder=" "/>
