--- a/HouHavn.Web/Pages/Creation/People.cshtml
+++ b/HouHavn.Web/Pages/Creation/People.cshtml
@@ -9,7 +9,7 @@
 
 <hr />
 <form method="post" autocomplete="off">
-    <div asp-validation-summary="All"></div>
+    @*<div asp-validation-summary="All"></div>*@
 
     <div class="input">
         <input asp-for="Person.FirstName" placeholder=" "/>
