--- a/HouHavn.Web/wwwroot/css/styles.css
+++ b/HouHavn.Web/wwwroot/css/styles.css
@@ -179,6 +179,60 @@ form {
 .error {
   color: #dd0000; }
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; }
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: -5px;
+  left: 110%; }
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent black transparent transparent; }
+
+.tooltip:hover .tooltiptext {
+  visibility: visible; }
+
+.notavailable {
+  background-image: linear-gradient(to right, transparent 60%, rgba(0, 255, 0, 0.8)); }
+
+.available {
+  background-image: linear-gradient(to right, transparent 60%, rgba(255, 0, 0, 0.8)); }
+
+.berthdisplay {
+  display: flex;
+  align-content: flex-start;
+  flex-direction: column;
+  height: 300px;
+  flex-wrap: wrap; }
+  .berthdisplay div {
+    height: 10%;
+    width: 14%;
+    box-sizing: border-box;
+    margin-right: 2.6%; }
+    .berthdisplay div a {
+      display: block;
+      text-decoration: none;
+      color: black;
+      height: 100%; }
+
 @media screen and (max-width: 660px) {
   main {
     padding: 40px 5% 60px;
