semi search thingy wrong branch.

--- a/HouHavn.Web/Pages/Display/BoatInfo.cshtml
+++ b/HouHavn.Web/Pages/Display/BoatInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{boatId}"
-@model HouHavn.Web.Pages.Creation.BoatInfoModel
+@model HouHavn.Web.Pages.Display.BoatInfoModel
 @{
     ViewData["Title"] = "BoatInfo";
 }
