--- a/HouHavn.Web/Pages/Shared/_Layout.cshtml
+++ b/HouHavn.Web/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,10 @@
                         </div>
                     </li>
                 </ul>
+                <form action="/Creation/SearchResult" method="get">
+                    <input type="text" placeholder="Søg" name="searchQuery"/>
+                    <button type="submit">Søg</button>
+                </form>
             </nav>
         </div>
 
