--- a/HouHavn.Web/wwwroot/css/styles.css
+++ b/HouHavn.Web/wwwroot/css/styles.css
@@ -23,7 +23,8 @@ header {
   header > div {
     width: 70%;
     display: flex;
-    margin: 0 auto; }
+    margin: 0 auto;
+    position: relative; }
     header > div .logo {
       text-decoration: none;
       color: #333;
@@ -31,41 +32,49 @@ header {
       position: relative;
       z-index: 100;
       background: white; }
-    header > div nav ul {
-      list-style: none;
-      display: flex; }
-      header > div nav ul li {
-        position: relative;
-        z-index: 3;
-        user-select: none; }
-        header > div nav ul li span {
-          padding: 15px 40px;
-          display: block;
+    header > div nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      header > div nav form {
+        justify-content: flex-end;
+        position: absolute;
+        right: 0; }
+      header > div nav ul {
+        list-style: none;
+        display: flex; }
+        header > div nav ul li {
           position: relative;
-          z-index: 2;
-          background: white; }
-        header > div nav ul li:hover span {
-          background: #eee; }
-        header > div nav ul li:hover div {
-          transform: translateY(100%); }
-        header > div nav ul li div {
-          position: absolute;
-          bottom: 0;
-          background: white;
-          width: 100%;
-          z-index: initial;
-          transition: .3s; }
-          header > div nav ul li div a {
+          z-index: 3;
+          user-select: none; }
+          header > div nav ul li span {
+            padding: 15px 40px;
             display: block;
-            padding: 10px 20px;
-            border: 1px solid #ccc;
-            color: black;
-            text-decoration: none; }
-            header > div nav ul li div a:hover {
-              background: #eee; }
-            header > div nav ul li div a:nth-child(2) {
-              border-top: 0;
-              border-bottom: 0; }
+            position: relative;
+            z-index: 2;
+            background: white; }
+          header > div nav ul li:hover span {
+            background: #eee; }
+          header > div nav ul li:hover div {
+            transform: translateY(100%); }
+          header > div nav ul li div {
+            position: absolute;
+            bottom: 0;
+            background: white;
+            width: 100%;
+            z-index: initial;
+            transition: .3s; }
+            header > div nav ul li div a {
+              display: block;
+              padding: 10px 20px;
+              border: 1px solid #ccc;
+              color: black;
+              text-decoration: none; }
+              header > div nav ul li div a:hover {
+                background: #eee; }
+              header > div nav ul li div a:nth-child(2) {
+                border-top: 0;
+                border-bottom: 0; }
 
 main {
   width: 70%;
