--- a/HouHavn.Web/wwwroot/css/styles.scss
+++ b/HouHavn.Web/wwwroot/css/styles.scss
@@ -28,7 +28,8 @@ header {
         width: 70%;
         display: flex;
         margin: 0 auto;
-        position:relative;
+        position: relative;
+        align-items: center;
 
         .logo {
             text-decoration: none;
@@ -46,8 +47,36 @@ header {
 
             form {
                 justify-content: flex-end;
-                position:absolute;
+                position: absolute;
                 right: 0;
+                display: flex;
+
+                input {
+                    font-size: .9em;
+                    padding: 5px;
+                    border: none;
+                    border: 2px solid #5D9BFB;
+                    outline: none;
+                }
+
+                input[type=text] {
+                    border-radius: 10px 0 0 10px;
+                    border-right: none;
+                }
+
+                input[type=submit] {
+                    padding: 5px 15px;
+                    background: #5D9BFB;
+                    transition: .3s;
+                    color: white;
+                    border-radius: 0 10px 10px 0;
+
+
+                    &:hover {
+                        background: darken(#5D9BFB, 10%);
+                        border-color: darken(#5D9BFB, 10%);
+                    }
+                }
             }
 
             ul {
@@ -141,6 +170,17 @@ footer{
 form {
     max-width: 500px;
 
+    .check-box-label {
+        padding: 10px;
+    }
+
+    .check-box:checked + div.input {
+        opacity: 0;
+        height: 0;
+        overflow: hidden;
+        margin: 0;
+    }
+
     * {
         box-sizing: border-box;
     }
@@ -156,6 +196,8 @@ form {
     }
 
     div.input {
+        transition: .3s;
+        opacity: 1;
         height: 50px;
         margin-top: 20px;
         position: relative;
@@ -234,39 +276,66 @@ form {
 
     div.submit {
         margin-top: 20px;
+
         input {
             padding: 15px 30px;
             border: none;
-            background: #5D9BFB;
             font-size: 1rem;
             color: white;
             transition: background .3s;
 
-            &:hover {
+            &.create {
+                background: #5D9BFB;
+            }
+
+            &.delete {
+                background: #f00;
+            }
+
+            &.create:hover {
                 background: darken(#5D9BFB, 10%);
+            }
+
+            &.delete:hover {
+                background: darken(#f00, 10%);
             }
         }
     }
 
-    div.select{
+    div.select {
         margin-top: 20px;
 
-        select{
+        select {
             width: 100%;
             padding: 5px;
         }
     }
 }
 
-.table{
+table {
     overflow-x: auto;
     border-spacing: 0;
-    th, td{
+
+    th, td {
         padding: 5px 15px;
     }
 
-    tr:nth-child(even){
+    tr:nth-child(even) {
         background: #eee;
+    }
+
+    a {
+        color: black;
+        transition: .3s;
+
+
+        &:hover {
+            color: #5D9BFB;
+        }
+
+        &.delete:hover{
+            color: #dd0000;
+        }
     }
 }
 
@@ -282,7 +351,7 @@ form {
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    width: 150px;
     background-color: black;
     color: #fff;
     text-align: center;
@@ -290,8 +359,10 @@ form {
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    top: -5px;
+    /*top: -5px;*/
     left: 110%;
+    top: 14.5px;
+    transform: translateY(-50%);
 }
 
 .tooltip .tooltiptext::after {
@@ -337,6 +408,15 @@ form {
         }
     }
 
+}
+
+dl{
+    dt{
+    }
+    dd{
+        border-bottom: 1px solid #ccc;
+        padding: 5px 15px 10px;
+    }
 }
 
 @media screen and (max-width:660px){
