--- a/HouHavn.Web/Pages/Creation/SearchResult.cshtml
+++ b/HouHavn.Web/Pages/Creation/SearchResult.cshtml
@@ -1,8 +1,59 @@
-﻿@page "{searchQuery}"
+﻿@page
 @model HouHavn.Web.Pages.Creation.SearchResultModel
 @{
     ViewData["Title"] = "SearchResult";
 }
 
 <h1>SearchResult</h1>
+
+
+<table>
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Boatlist[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Boatlist[0].Type)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Boatlist[0].PropulsionType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Boatlist[0].BerthNavigation)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Boatlist[0].PersonNavigation)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Boatlist)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PropulsionType)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BerthNavigation.BerthId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PersonNavigation.FullName)
+                </td>
+                <td>
+                    <a asp-page="../Lists/Boats/Edit" asp-route-id="@item.BoatId">Redigér</a> |
+                    <a asp-page="../Lists/Boats/Details" asp-route-id="@item.BoatId">Detaljer</a> |
+                    <a asp-page="../Lists/Boats/Delete" asp-route-id="@item.BoatId" class="delete">Slet</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
