Search page almost complete, need Person edit/detail pages.

--- a/HouHavn.Web/Pages/Lists/Boats/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Delete.cshtml
@@ -74,6 +74,7 @@
             <input class="delete" type="submit" value="Slet båd" />
         </div>
 
-        <a asp-page="./Index">Back to List</a>
+        <a href='javascript:history.go(-1)'>Tilbage</a>
+        @*<a asp-page="./Index">Back to List</a>*@
     </form>
 </div>
