--- a/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
@@ -84,7 +84,8 @@
 </form>
 
 <div>
-    <a asp-page="./Index">Tilbage til listen</a>
+    <a href='javascript:history.go(-1)'>Tilbage</a>
+    @*<a asp-page="./Index">Tilbage til listen</a>*@
 </div>
 
 @section Scripts {
