--- a/HouHavn.Web/Pages/Creation/SearchResult.cshtml
+++ b/HouHavn.Web/Pages/Creation/SearchResult.cshtml
@@ -33,8 +33,10 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
+                    <a asp-page="../Lists/Boats/Details" asp-route-id="@item.BoatId">
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </a>
+</td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Type)
                 </td>
@@ -48,9 +50,9 @@
                     @Html.DisplayFor(modelItem => item.PersonNavigation.FullName)
                 </td>
                 <td>
-                    <a asp-page="../Lists/Boats/Edit" asp-route-id="@item.BoatId">Redigér</a> |
+                    @*<a asp-page="../Lists/Boats/Edit" asp-route-id="@item.BoatId">Redigér</a> |
                     <a asp-page="../Lists/Boats/Details" asp-route-id="@item.BoatId">Detaljer</a> |
-                    <a asp-page="../Lists/Boats/Delete" asp-route-id="@item.BoatId" class="delete">Slet</a>
+                    <a asp-page="../Lists/Boats/Delete" asp-route-id="@item.BoatId" class="delete">Slet</a>*@
                 </td>
             </tr>
         }
