--- a/HouHavn.Web/Pages/Lists/Boats/Details.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Details.cshtml
@@ -68,5 +68,6 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Boat.BoatId">Redigér</a> |
-    <a asp-page="./Index">Tilbage til listen</a>
+    <a href='javascript:history.go(-1)'>Tilbage</a>
+    @*<a asp-page="./Index">Tilbage til listen</a>*@
 </div>
